Fixed shit CSS that was causing responsiveness to break in iOS Safari.

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -31,7 +31,7 @@ p.chars{
     margin: 1em;
     transform: none;
     font-size: 1.2rem;
-    min-width: auto;
+    min-width: none;
   }
   div.forecast{
     padding: 1em;
